--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,9 @@ jobs:
   build:
     needs: unit-tests
     runs-on: ubuntu-20.04
+    env:
+      SQLX_OFFLINE: true
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
     steps:
       - uses: actions/checkout@v2
       - run: sudo apt-get install musl musl-tools
@@ -50,8 +53,6 @@ jobs:
   deploy:
     needs: build
     runs-on: ubuntu-20.04
-    env:
-      DATABASE_URL: ${{ secrets.DATABASE_URL }}
     steps:
       - uses: actions/checkout@v2
       - uses: actions/download-artifact@v2
